updated api ref